<resources>
    <string name="app_name">3403a070633024d4355abf78de36a2dd</string>
    <string name="station">Istasiyon</string>
    <string name="favourite">Favoriler</string>
    <string name="separated_point">Dağıtlacak Puan: </string>
    <string name="max_given_point">15</string>
    <string name="ship_name">name of ship</string>
    <string name="power">Dayanıklılık</string>
    <string name="speed">Hiz</string>
    <string name="capacity">kapasite</string>
    <string name="continues">Devam et</string>
    <string name="overloaded">Over Loaded</string>
    <string name="enter_name">enter name</string>
    <string name="try_again">Try Again!</string>
    <string name="not_loaded">not loaded</string>
    <string name="ugs">UGS: </string>
    <string name="eus">EUS: </string>
    <string name="ds">DS: </string>
    <string name="slash">/</string>
    <string name="travel">Travel</string>
    <string name="search">search</string>
</resources>